@@ -143,6 +143,83 @@ Once set <tt>[1,2,3]*[4,5,6]</tt> will evaluate to <tt>[4,10,18]</tt>.
 </tbody>
 </table>
 
+<h3>Functions on Vectors and Matricies</h3>
+<p>
+Several functions are added with the VectorJep package these are:
+</p>
+<table border="0" cellspacing="1" cellpadding="2" width="100%" bgcolor="#CCCCCC">
+<tr bgcolor="#FFFFFF">
+	<th><b>Name</b></th>
+	<th><b>Description</b></th>
+	<th><b>Examples</b></th>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>length</td>
+	<td>Finds the length of a vector or the number of elements in a matrix or tensor.</td>
+	<td><tt>length(5)==1</b>, <tt>length([1,2,3])==3</tt>, <tt>length([[1,2],[3,4]])==4</tt></td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>size</td>
+	<td>Finds the size of a vector, matrix or tensor.</td>
+	<td><tt>size(5)==1</tt>, <tt>size([1,2,3])==3</tt>, <tt>size([[1,2],[3,4],[5,6])==[2,3]</tt></td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>det</td>
+	<td>The determinant of a square matrix.</td>
+	<td><tt>det([[1,2],[3,4]])==-2</tt></td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>trace</td>
+	<td>The trace of a square matrix.</td>
+	<td><tt>trace([[1,2],[3,4]])==5</tt></td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>vsum</td>
+	<td>The sum of elements in a vector, matrix or tensor.</td>
+	<td><tt>vsum([1,2,3])==6</tt>, <tt>vsum([[1,2],[3,4]])==10</td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>trans</td>
+	<td>The transpose of a matrix.</td>
+	<td><tt>trans([[1,2],[3,4]])==[[1,3],[2,4]]</tt></td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>getdiag</td>
+	<td>Extracts the diagonal from a square matrix.</td>
+	<td><tt>getdiag([[1,2],[3,4]])==[1,4]</tt></td>
+
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>diag</td>
+	<td>Generates a square matrix with a given diagonal.</td>
+	<td><tt>diag([1,2,3])==[[1,0,0],[0,2,0],[0,0,3]]</tt></td>
+</tr>
+<tr bgcolor="#FFFFFF" valign="top">
+	<td>ele</td>
+	<td>Extracts an element from a vector, matrix or tensor.</td>
+	<td><tt>ele([1,2,3],2)==2</tt>, <tt>ele([[1,2],[3,4]],[1,2])==2</td>
+</tr>
+</table>
+<br>
+<p>
+The Map function applies a function to each element of a vector or matrix.
+The first argument is the function to apply.
+The second argument is either a variable or a list of variables.
+The third and subsequent arguments are the vectors or matricies the function is applied to.
+During evaluation the variables will be set to each element of the vectors or matricies.
+For example
+</p>
+<pre>Map(x^3,x,[1,2,3]) is [1.0,8.0,27.0]
+Map(x*y,[x,y],[1,2,3],[4,5,6]) is [4.0,10.0,18.0]
+Map(if(x>0,x,0),x,[-2,-1,0,1,2]) is [0.0,0.0,0.0,1.0,2.0]
+Map(abs(x),x,[[-2,-1],[1,2]]) is [[2.0,1.0],[1.0,2.0]]
+</pre>
+
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr><td align="right"><a href="#top"><img src="../img/top.gif" width="38" height="15" name="top" border="0"></a></td></tr>
+<tr><td bgcolor="#cccccc"><img src="../img/spacer.gif" width="1" height="1"></td></tr>
+</tbody>
+</table>
+
 <h2><a name="MAT"></a>MatrixJep</h2>
 The MatrixJep package offers the same functionality as the VectorJep
 package however it is implemented in a different manner internally
