@@ -366,11 +366,11 @@ For example
 Other sum-type functions include:
 <ul>
 <li>Sum - finds sum over range.
-<li>Product
+<li>Product - finds the product 
 <li>Min - finds minimum value
 <li>Max - finds maximum value
-<li>MinArg - finds value of variable giving the minimum
-<li>MaxArg - finds value of variable giving the maximum
+<li>MinArg - finds index of variable giving the minimum
+<li>MaxArg - finds index of variable giving the maximum
 <li>Simpson - implements Simpson rule for aproximation to integral.
 </ul>
 Note all these function begin with a capital letter to distinguish from
